--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Battleship</title>
 </head>
+
 <body>
+        <a href="/battleship/registration"> Start a new game! </a>
 
 </body>
 </html>
