--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="UTF-8">
     <title>Battleship</title>
 </head>
 
 <body>
-        <a href="/battleship/registration"> Start a new game! </a>
+<div class="w3-panel w3-blue">
+    <h1 class="w3-opacity">
+        <b><a href="/battleship/registration"> Start a new game! </a></b></h1>
+</div>
 
 </body>
 </html>
