--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <div class="w3-panel w3-blue">
-    <h1 class="w3-opacity">
+    <h1 class="w3-opacity w3-animate-left">
         <b><a href="/battleship/registration"> Start a new game! </a></b></h1>
 </div>
 
